--- a/SEM 2/WT/tt.html
+++ b/SEM 2/WT/tt.html
@@ -119,7 +119,7 @@
             <td class="table-heading">10:00-11:00</td>
             <td class="table-heading">11:00-12:00</td>
             <td class="table-heading">12:00-1:00</td>
-            <td class="table-heading" class="ps"></td>
+            <td class="table-heading">1:00-2:00</td>
             <td class="table-heading">2:00-3:00</td>
             <td class="table-heading">3:00-4:00</td>
             <td class="table-heading">4:00-5:00</td>
@@ -131,7 +131,7 @@
             <td>DBS</td>
             <td>MTP</td>
             <td>DS</td>
-            <td class="ps"></td>
+            <td rowspan="5"></td>
             <td colspan="2">DB Lab(CS)</td>
             <td></td>
         </tr>
@@ -142,7 +142,6 @@
             <td>MTP</td>
             <td>DS</td>
             <td>DBS</td>
-            <td></td>
             <td colspan="3">DS Lab(CS)</td>
         </tr>
         <tr>
@@ -155,14 +154,12 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
         </tr>
         <tr>
             <td class="row-head">Thu</td>
             <td></td>
             <td></td>
             <td colspan="3">WT Lab(CS)</td>
-            <td></td>
             <td>WT</td>
             <td>OOP</td>
             <td></td>
@@ -172,7 +169,6 @@
             <td></td>
             <td>OOP</td>
             <td colspan="3">OOP Lab(CS)</td>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
