Java + WT Assignments updated

--- a/SEM 2/WT/assignment 1/q2/q2_registration.html
+++ b/SEM 2/WT/assignment 1/q2/q2_registration.html
@@ -6,32 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
-    <style>
-        body {
-            background-color: aliceblue;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-
-        .ml {
-            margin-left: 100px;
-        }
-
-        fieldset{
-            background-color: #ceceed;
-        }
-
-        legend {
-            font-weight: bold;
-            color: #00597a;
-        }
-
-        .center{
-            width: max-content;
-            margin: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <h1 align="center">Student Registration Form</h1>
     <form action="#">
