--- a/SEM 2/WT/assignment 1/q4/q4_list.html
+++ b/SEM 2/WT/assignment 1/q4/q4_list.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lists</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: brown; color: white;">
+<body>
     <ol type="I">
         <li>MS Office</li>
         <ol type="A">
