more updates to cv

--- a/SEM 2/WT/assignment 1/q3/q3_CV.html
+++ b/SEM 2/WT/assignment 1/q3/q3_CV.html
@@ -4,6 +4,7 @@
     <title>Ayush's CV</title>
     <script src="https://kit.fontawesome.com/01d3148803.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
@@ -24,8 +25,8 @@
                 <a href="https://www.github.com/xarcode" id="github">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="mailto:ayush.idnan@gmail.com" id="email">
-                    <i class="fa-solid fa-at"></i>
+                <a href="https://twitter.com/xarcodetwt" id="email">
+                    <i class="fa-brands fa-twitter"></i>
                 </a>
             </div>
         </div>
@@ -52,6 +53,14 @@
             </ul>
             </p>
             <h3>Professional Experience</h3>
+            <h4 id="company-name">Times Of India</h4>
+            <p id="job-title"><strong>Student Editor</strong></p>
+            <p id="job-responsibilities">Job Responsbilities</p>
+            <p>
+            <ul class="list">
+                <li data-list-icon="🪧">Review an upcoming TOI issue once a year</li>
+                <li data-list-icon="🪧">Make edits, suggest articles and manage layout of upcoming issues</li>
+            </ul>
             <h4 id="company-name">Chegg India</h4>
             <p id="job-title"><strong>Subject Matter Expert (Computer Science)</strong></p>
             <p id="job-responsibilities">Job Responsbilities</p>
@@ -65,7 +74,7 @@
             <table>
                 <tr id="heading">
                     <td>Qualification</td>
-                    <td>Board</td>
+                    <td>School / Uni</td>
                     <td>Percentage / Grades</td>
                     <td>Year</td>
                 </tr>
