2nd feb wt lab work

--- a/SEM 2/WT/assignment 1/q3/q3_CV.html
+++ b/SEM 2/WT/assignment 1/q3/q3_CV.html
@@ -35,7 +35,7 @@
             <p>
             <ul class="list">
                 <div>
-                    <li data-list-icon="⚡">Currently going through <em>The Complete 2023 Web Development Bootcamp</em>
+                    <li data-list-icon="⚡">Currently going through The Complete 2023 Web Development Bootcamp
                     </li>
                 </div>
                 <div>
