wt assignment commit

--- a/SEM 2/WT/assignment 1/q10/html/cart.html
+++ b/SEM 2/WT/assignment 1/q10/html/cart.html
@@ -24,6 +24,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/navbar-style.css">
     <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/catalouge.css"> -->
+    <link rel="stylesheet" href="../css/cart.css">
     <title>NITW EBS</title>
 </head>
 
@@ -32,7 +34,7 @@
         <div class="categories">
             <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
             <div class="lord-icon">
-                <lord-icon src="https://cdn.lordicon.com/qvbrkejx.json" trigger="morph" colors="primary:#fbeaeb"
+                <lord-icon src="https://cdn.lordicon.com/qvbrkejx.json" trigger="morph" colors="primary:#2f3c7e"
                     state="morph">
                 </lord-icon>
             </div>
@@ -64,6 +66,40 @@
             <a href="register.html"><i class="fa-solid fa-right-to-bracket"></i></a>
             <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
         </div>
+    </div>
+    <hr class="hr">
+    <div class="cart">
+        <div class="cart-item">
+            <div class="cart-item-img"><img src="../images/books/book2.jpg" alt=""></div>
+            <div class="cart-item-details">
+                <h1 class="name">Discrete Math & Its Applications</h1>
+                <p class="author">Kenneth H. Rosen</p>
+                <p class="price">Price - &#8377;799</p>
+                <p class="quantity">Quantity - 10</p>
+            </div>
+        </div>
+        <hr class="sep">
+        <div class="cart-item">
+            <div class="cart-item-img"><img src="../images/books/clrs.jpg" alt=""></div>
+            <div class="cart-item-details">
+                <h1 class="name">Introduction To Algorithms</h1>
+                <p class="author">Cormen, Lierson, Rivest and Stein</p>
+                <p class="price">Price - &#8377;980</p>
+                <p class="quantity">Quantity - 2</p>
+            </div>
+        </div>
+        <hr class="sep">
+        <div class="cart-item">
+            <div class="cart-item-img"><img src="../images/books/book4.jpg" alt=""></div>
+            <div class="cart-item-details">
+                <h1 class="name">Cracking The Coding Interview</h1>
+                <p class="author">Gayle McDowel</p>
+                <p class="price">Price - &#8377;578</p>
+                <p class="quantity">Quantity - 5</p>
+            </div>
+            <!-- <hr> -->
+        </div>
+        <!-- <hr class="sep"> -->
     </div>
 </body>
 
